@@ -1,3 +1,4 @@
+(BUGFIX) Double click to the right of "{}()<>[]" selects the content
 (ENHANCE) Configure will add TruType support by default
 (INTERNAL) Remove code to support old Tcl/Tk versions
 (INTERNAL) Remove direct access to interp->result
